# LearningROS

./: .gitignore  README.md
dispatch/src/dispatch_robot_comm/: CMakeLists.txt
dispatch/src/dispatch_robot_comm/launch/: dispatch_robot_comm.launch
dispatch/src/dispatch_robot_comm/src/: dispatch_robot_comm.cpp
dispatch/src/dispatch_robot_comm/test/: test_dispatch_robot_comm.cpp
dispatch/src/ros2json/: CMakeLists.txt  package.xml
dispatch/src/ros2json/include/ros2json/: dispatch.h
dispatch/src/ros2json/launch/: dispatch.launch
dispatch/src/ros2json/src/: client_node.cpp
dispatch_robot_comm/: CMakeLists.txt  package.xml
dispatch_robot_comm/include/dispatch_robot_comm/: dispatch_robot_comm.h
dispatch_robot_comm/launch/: dispatch_robot_comm.launch
dispatch_robot_comm/src/: dispatch_robot_comm.cpp  main.cpp
dispatch_robot_comm/test/: local_sdk_server.cpp
lidar_cam_calib/: cfg
lidar_cam_calib/devel/: .catkin  .rosinstall  setup.sh
lidar_cam_calib/devel/include/camlasercalib/: laser_cutConfig.h
lidar_cam_calib/devel/lib/camlasercalib/: lidar_cam
lidar_cam_calib/devel/lib/pkgconfig/: usb_cam.pc
lidar_cam_calib/devel/lib/usb_cam/: usb_cam_node
lidar_cam_calib/src/camlasercalib/: CMakeLists.txt  package.xml
lidar_cam_calib/src/camlasercalib/cfg/: pointcloudcut.cfg
lidar_cam_calib/src/camlasercalib/include/: Marker.h  MarkerDetector.h  camLaserCalib.h  pcl_util.h
lidar_cam_calib/src/camlasercalib/launch/: calib.launch
lidar_cam_calib/src/camlasercalib/src/: Marker.cpp  MarkerDetector.cpp  camLaserCalib.cpp  camlasercalib_node.cpp  pcl_util.cpp
lidar_cam_calib/src/transfm/: CMakeLists.txt  imageCloudPoints.txt  package.xml
lidar_cam_calib/src/transfm/src/: solvepnp.cpp
lidar_cam_calib/src/usb_cam/launch/: usb_cam_and_calib.launch
loam_velodyne/rviz_cfg/: loam_velodyne.rviz
obstacle_avoidance/: costmap_converter_params.yaml  ob_dec.py  teb_local_planner_params.yaml
opencv_learning/devel/: .catkin  .rosinstall  setup.sh
opencv_learning/devel/include/qr_navigation/: qrMsg.h
opencv_learning/devel/lib/agv_qr/: agv_qr
opencv_learning/devel/lib/lighthouse_navigation/: magnetic_tf_pub
opencv_learning/devel/lib/pkgconfig/: agv_qr.pc  lighthouse_navigation.pc  qr_navigation.pc  qr_opencv.pc  quad_navig.pc  zbar_opencv.pc
opencv_learning/devel/lib/qr_navigation/: qr_navig
opencv_learning/devel/lib/qr_opencv/: qr_cam_tf
opencv_learning/devel/lib/quad_navig/: quad_navig
opencv_learning/devel/lib/zbar_opencv/: zbar_opencv
opencv_learning/src/agv_qr/: CMakeLists.txt  package.xml
opencv_learning/src/agv_qr/include/: barScanner.h
opencv_learning/src/agv_qr/launch/: agv_qr.launch
opencv_learning/src/agv_qr/src/: agv_qr.cpp  barScanner.cpp
opencv_learning/src/data/param/: calib.yml  result.yml  sampleread.txt
opencv_learning/src/find_square/: CMakeLists.txt  package.xml
opencv_learning/src/find_square/src/: findSquare.cpp
opencv_learning/src/lighthouse_navigation/: CMakeLists.txt  package.xml
opencv_learning/src/lighthouse_navigation/cfg/: LighthouseRecognize.cfg
opencv_learning/src/lighthouse_navigation/include/: lighthouse_planner.h  magnetic_driver.h  magnetic_tf_pub.h  triangle_recognize.h
opencv_learning/src/lighthouse_navigation/launch/: lighthouse_recognize.launch  reflector_recognition.launch  triangle_recognize.launch
opencv_learning/src/lighthouse_navigation/src/: lighthouse_planner.cpp  lighthouse_recognize.cpp  magnetic_tf_pub.cpp
opencv_learning/src/lighthouse_navigation/test/: display_fit.py  shell_pose_in_map_ok.sh  waypoints_lighthouse.yaml
opencv_learning/src/pallet_detect/: CMakeLists.txt
opencv_learning/src/pallet_tf/: CMakeLists.txt  package.xml
opencv_learning/src/pallet_tf/cfg/: param.cfg
opencv_learning/src/pallet_tf/include/pallet_tf/: pallet_tf.h
opencv_learning/src/pallet_tf/launch/: pallet_tf.launch
opencv_learning/src/pallet_tf/src/: pallet_tf.cpp  pallet_tf_node.cpp
opencv_learning/src/qr_location/: CMakeLists.txt
opencv_learning/src/qr_location/include/: QRLocation.h
opencv_learning/src/qr_location/src/: QRLocation.cpp  QRLocationTest.cpp
opencv_learning/src/qr_navigation/: CMakeLists.txt  README.md
opencv_learning/src/qr_navigation/include/: barScanner.h
opencv_learning/src/qr_navigation/launch/: qr_navig.launch
opencv_learning/src/qr_navigation/libs/: libzbar.so.0.2.0  libzbarqt.la  libzbarqt.so.0.0.2
opencv_learning/src/qr_navigation/msg/: qrMsg.msg  test_msg~
opencv_learning/src/qr_navigation/src/: barScanner.cpp  qr_navig.cpp
opencv_learning/src/qr_opencv/: CMakeLists.txt  package.xml
opencv_learning/src/qr_opencv/include/: findMarker.h
opencv_learning/src/qr_opencv/src/: findMarker.cpp  qrcam.cpp
opencv_learning/src/quad_navig/: CMakeLists.txt  package.xml  tags
opencv_learning/src/quad_navig/include/quad_navig/: quadScanner.h
opencv_learning/src/quad_navig/launch/: quad_navig.launch
opencv_learning/src/quad_navig/src/: quadScanner.cpp  quad_navig.cpp
opencv_learning/src/test/: findMarker.cpp  findMarker.h  qr_Id.cpp  sampleread.txt
opencv_learning/src/zbar_opencv/: CMakeLists.txt
opencv_learning/src/zbar_opencv/include/: zbarScanner.h
opencv_learning/src/zbar_opencv/libs/: libzbar.la  libzbargtk.la  libzbargtk.so.0.0.2
opencv_learning/src/zbar_opencv/src/: zbarScanner.cpp  zbar_opencv.cpp
pcl_learning/: .ycm_extra_conf.py
pcl_learning/devel/: .catkin  .rosinstall  setup.sh
pcl_learning/src/basic_usage/: CMakeLists.txt  package.xml
pcl_learning/src/basic_usage/src/: matrix_transform.cpp
pcl_learning/src/fit_line/: CMakeLists.txt  package.xml
pcl_learning/src/laser_line_detect/: CMakeLists.txt  package.xml
ros_org/devel/: .catkin  .rosinstall  setup.sh
ros_org/src/hellorobot/: CMakeLists.txt  package.xml
ros_org/src/robot_setup_tf/: package.xml
ros_org/src/simple_navigation_goals/: CMakeLists.txt  package.xml
ros_org/src/test_msgs/: CMakeLists.txt  package.xml
ros_org/src/test_msgs/src/: talker.cpp
ros_tf/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros_tf/src/robot_setup_tf/: CMakeLists.txt
(+83 files in other folders)
