<?xml version="1.0"?>
<package>
  <name>test_msgs</name>
  <version>0.0.0</version>
  <description>The test_msgs package</description>


  <maintainer email="siat@todo.todo">siat</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>